CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc2

	- The cupsGetFile() and cupsPutFile() code did not
	  support CDSA or GNUTLS (STR #794)
	- The httpSeparate() function did not decode all
	  character escapes (STR #795)
	- The cupstestppd program now checks for invalid Duplex
	  option choices and fails PPD files that use
	  non-standard values (STR #791)
	- Updated the printer name error message to indicate
	  that spaces are not allowed (STR #675)
	- The scheduler didn't handle HTTP GET form data
	  properly (STR #744)
	- The pstops filter now makes sure that the prolog code
	  is sent before the setup code (STR #776)
	- The pstops filter now handles print files that
	  incorrectly start @PJL commands without a language
	  escape (STR #734)
	- Miscellaneous build fixes for NetBSD (STR #788)
	- Added support for quoted system group names (STR #784)
	- Added "version" option to IPP backend to workaround
	  serious bug in Linksys's IPP implementation (STR #767)
	- Added Spanish translation of web interface (STR #772)
	- The LPD backend now uses geteuid() instead of getuid()
	  when it is available (STR #752)
	- The IPP backend did not report the printer state if
	  the wait option was set to "no" (STR #761)
	- The printer state was not updated for "STATE: foo,bar"
	  messages (STR #745)
	- Added new CUPS API convenience functions which accept
	  a HTTP connection to eliminate extra username/password
	  prompts. This resolves a previous authentication
	  caching issue (STR #729, STR #743)
	- The scheduler did not correctly throttle the browse
	  broadcasts, resulting in missing printers on client
	  machines (STR #754)
	- The scheduler did not pass the correct CUPS_ENCRYPTION
	  setting to CGI programs which caused problems on
	  systems which used non-standard encryption settings
	  (STR #773)
	- The lpq command showed 11st, 12nd, and 13rd instead of
	  11th, 12th, and 13th for the rank (STR #769)
	- "make install" didn't work on some platforms due to an